# audio-diarization-transcript

./: .gitignore  README.md  app.py  audio_processor.py  embedding_cache.py  main.py  pyproject.toml  requirements-spark.txt  spark-down.sh  spark-logs.sh  spark-up.sh  spark_client.py  spark_server.py  speaker_identification.py  subtitle_exporter.py  subtitle_matcher.py  test_transcript_ms_integer.py  transcription_backend.py  voice_database.py
temp/: matching_input.srt  subtitles.srt  transcription.srt
temp/clusters/20260609-015830-4ff295/: job.json
temp/clusters/20260609-022018-c0f851/: job.json
temp/clusters/20260609-022757-32ea7d/: job.json
temp/clusters/20260609-033619-9bf1ae/: job.json
temp/clusters/20260609-040402-80872a/: job.json
temp/clusters/20260609-041848-0f83db/: job.json
temp/clusters/20260609-042811-ed1d2b/: job.json
temp/clusters/20260609-045424-4202ee/: job.json
temp/clusters/20260609-053247-0c7be3/: job.json
temp/clusters/20260609-061502-ad1f7d/: job.json
temp/clusters/20260609-062806-175e21/: job.json
temp/clusters/20260609-064630-9de35d/: job.json
temp/clusters/20260615-232921-7b32bd/: job.json
temp/clusters/20260616-003151-4cff8a/: job.json
temp/clusters/20260616-010954-f2731f/: job.json
temp/clusters/20260616-012506-5cc5d0/: job.json
temp/clusters/20260616-021212-de57d6/: job.json
templates/: databases.html  index.html  unknowns.html
templates/partials/: crop_editor.html  crop_editor_script.html  db_list.html  db_select_options.html  db_speakers.html  error.html  success_generation.html  success_matching.html  success_transcription.html  unknowns_list.html
