[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audio-diarization-integration"
version = "0.1.0"
description = "話者照合機能付き文字起こし＆話者分離スクリプト"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "pyannote-audio>=3.1.0",
    "scipy>=1.10.0",
    "mlx-whisper>=0.2.0",  # Mac (Apple Silicon) 向けのWhisper実装
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
# 必要に応じて、コマンドラインから `audio-transcribe` のように実行できるエイリアスを設定できます
audio-transcribe = "main:main"

[tool.uv]
# uv を使用する場合の追加設定（必要に応じて）
# 例えば、Mac環境専用に制約をかける場合などに使用します

[tool.hatch.build.targets.wheel]
modules = ["main"]
only-include = ["main.py"]